--- a/CNA-Rules.adoc
+++ b/CNA-Rules.adoc
@@ -90,3 +90,14 @@ include::section-22.adoc[]
 
 include::section-23.adoc[]
 
+include::section-24.adoc[]
+
+include::section-25.adoc[]
+
+include::section-26.adoc[]
+
+include::section-27.adoc[]
+
+include::section-28.adoc[]
+
+include::section-29.adoc[]
