--- a/section-23.adoc
+++ b/section-23.adoc
@@ -17,3 +17,43 @@ CASES:
 [#23_1]
 === ENGINEER UNITS
 
+[#23_12]*[23.12]* Engineer units may be replaced even if eliminated. Engineer
+units are rebuilt according to the schedule in Case <<20_3>>.
+
+[#23_13]*[23.13]* The Commonwealth has two units of the New Zealand RR
+Construction Battalion. These are used solely for the construction and repair of
+Railroads. The 18.A. Road Construction unit is used solely for Road work.
+
+[#23_14]*[23.14]* Headquarters units with a letter E next to their Stacking
+Points have Engineering capability (see Section<<24_0>> but otherwise they are
+treated like any other HQ unit.
+
+[#23_2]
+=== USES OF ENGINEERS
+
+[#23_21]*[23.21]* The cost for a unit that is stacked with any Engineer unit (or
+HQ unit with Engineering capability) to enter an Enemy Minefield is reduced to
+six CP's for Motorized units and three CP's for non-motorized units (see Terrain
+Effects Chart, Case <<8_37>>.
+
+[#23_22]*[23.22]* If an.Engineer unit or a HQ with Engineer capability remains
+in an Enemy Minefield hex for an entire Operations Stage without expending any
+CP's, that Minefield is removed at the end of the Operations Stage.
+
+[#23_23]*[23.23]* Engineer units and HQ's with Engineer capability may help to
+build fortifications, rebuild fortifications and bombed roads, build, rebuild
+and dismantle Temporary Repair Facilities, and build and rebuild Railroads and
+Air Facilities (see Section <<24_0>>.
+
+[#23_24]*[23.24]* If an unpinned Engineer Battalion or HQs with Engineer
+capability is attached to units mounting a Close Assault against units in a
+fortified hex (not a Major City hex), the Assault Differential column may be
+adjusted one in favor of the assaulting units.
+
+[#23_25]*[23.25]* In addition to the above, Engineers and HQ's with Engineer
+capability have a variety of minor capabilities spread throughout the rules.
+Moreover, most of the above rules are covered in other Sections (e.g.,
+Minefields).
+
+[#23_26]*[23.26]* Engineer units may not build or destroy ‘bridges' (i.e.,
+River/wadi crossings) nor affect escarpments.
