--- a/section-20.adoc
+++ b/section-20.adoc
@@ -19,7 +19,7 @@ CASES:
 === REINFORCEMENTS
 
 [#20_11]*[20.11]* Reinforcements are new, whole units that arrive as specified
-by the Reinforcement Track.  Thus, in the September <<3_2>>, Operations Stage,
+by the Reinforcement Track.  Thus, in the September 3/2, Operations Stage,
 the Commonwealth Player receives the 6th New Zealand Brigade (and its three
 battalions) as well as the 6th NZ Field Artillery Regiment.
 
@@ -39,9 +39,9 @@ of Tank Replacement Points (which are reinforcements) arrive in Alexandria.
 Returning withdrawn units arrive at Cairo or Alexandria at the Commonwealth
 Player's option (subject to stacking restrictions).
 
-[#20_15]*[20.15]* Ali Axis reinforcements arrive in Tripoli, However, if there
-are no Commonwealth land combat units west of Mersa Matruh (inclusive) then “the
-Asis Player may divert forces to Benghazi. The Axis Player may bring in one
+[#20_15]*[20.15]* All Axis reinforcements arrive in Tripoli, However, if there
+are no Commonwealth land combat units west of Mersa Matruh (inclusive) then the
+Axis Player may divert forces to Benghazi. The Axis Player may bring in one
 battalion-equivalent combat unit or two companyequivalent combat units and up to
 ten Truck (or Motorization) Points assigned to arrive with that unit (or its
 parent unit). The Axis Player may not divert units to Benghazi if this will
@@ -55,7 +55,7 @@ capacity for that Operations Stage (see Case <<55_1>>).
 Replacement Points are designated by Class as follows: Infantry Points, Gun
 Points, Tank Points, and Recce Points. Replacement Points usually enter the game
 for Axis Replacement Points only — at the option of the Axis Player from the
-Axis Replacement Points Pool (see Case 20.6),-or — for the Commonwealth Player
+Axis Replacement Points Pool (see Case <<20_6>>),-or — for the Commonwealth Player
 only — in accordance with the Commonwealth Production System (see Case
 <<20_7>>). All Replacement Points, regardless of the method in which they enter
 the game, are covered by the same restrictions as listed in this Case.
@@ -72,7 +72,7 @@ Case <<20_7>>).
 
 [#20_22]*[20.22]* Commonwealth Replacement Points may be—rarely—listed on the
 Reinforcement Track.They are designated by type (e.g., the Commonwealth Player
-will receive "27 points of Matildes," not merely "27 points of tanks").
+will receive "27 points of Matildas," not merely "27 points of tanks").
 
 [#20_23]*[20.23]* Replacement Points that are available in the Axis Replacement
 Pool are designated by type only. He is limited as to how many points of each
@@ -117,7 +117,7 @@ unit they are being assigned to); if they ever exceed their CPA — for any reas
 [#20_43]*[20.43]* Replacement Points (both Axis and Commonwealth) are required
 to undergo Training. They must train for a specific number of Operations Stages,
 which may include the Stage of arrival, Players should consult the rules on
-Training (17.3) for particulars, as the same rules that apply to Training
+Training (<<17_3>>) for particulars, as the same rules that apply to Training
 Reinforcements apply to Replacements. Axis points train in Tripoli or any major
 city. Commonwealth units train in those locations listed in Case <<17_32>>. When
 in doubt as to unit size, five Replacement Points equals one battalion. The
@@ -140,7 +140,7 @@ schedule for Replacement Training is as follows:
 *Note*: This has nothing to do with Commonwealth
 training for Morale.
 
-[#20_44]*[20.44]* In essence, within the parameters of Case 20.42, Trained
+[#20_44]*[20.44]* In essence, within the parameters of Case <<20_42>>, Trained
 Infantry Replacement Points are usually trucked (if available) to the Front Line
 after undergoing Training, where they are transferred to the unit of
 assignation. Trained Tank, Gun and Recce Replacement Points may move on their
@@ -160,16 +160,15 @@ Assignment Sheets for keeping track of what is happening with their Replacement
 Points.
 
 [#20_48]*[20.48]* The cost in Capability Points to attach Replacement Points to
-units is listed on the Capability Point Cost Summary (6,3) Replacement Point
+units is listed on the Capability Point Cost Summary (<<6_3>>) Replacement Point
 units are considered as Assigned units for this purpose.
 
-[#20_49]*[20.49]* Replacement Points may be absorbed only during the-
+[#20_49]*[20.49]* Replacement Points may be absorbed only during the
 Reorganization Segment. They then acquire the assigned unit's cohesion,
 breakdown and other levels.
 
 [#20_5]
-=== UPGRADING ARMORED CAR
-EFFECTIVENESS
+=== UPGRADING ARMORED CAR EFFECTIVENESS
 
 At the beginning of the campaign, most Armored Car and Reconnaissance (Recce)
 units were "light" in nature, using lightly armored cars, carriers, and AP
@@ -178,9 +177,9 @@ equipment was often upgraded with the addition of light tanks and better-armed
 cars and carriers.  This rule reflects that increase in effectiveness.
 
 [#20_51]*[20.51]* All armored reconnaissance and armored car (i.e., Italian ID
-Code "ww,”' German ID Code ‘“go”? and Commonwealth ID Code "hh”' thru ““tt??
+Code "ww" German ID Code "go" and Commonwealth ID Code "hh" thru "tt"
 inclusive) units that arrive/deploy with an Anti-armor Rating of zero (even
-those also possessing an Offensive Close Assault Rating of “*3" — see Case
+those also possessing an Offensive Close Assault Rating of "3" — see Case
 <<20_54>>) may be increased in effectiveness with the following exception. None
 of the Commonwealth Player's Recce units assigned to Infantry Divisions (for
 this purpose, the 18th Brigade of the 7th Australian Division is. considered a
@@ -203,13 +202,13 @@ car Replacement Points.
 Anti-Armor Rating of 1, instead of zero, and an Offensive Close Assault Rating
 of 3, instead of 2.
 
-[#20_55]*[20.55]* No units may be upgraded until1/39, at the earliest.
+[#20_55]*[20.55]* No units may be upgraded until 1/39, at the earliest.
 
 [#20_6]
 === AXIS PLANNED REPLACEMENTS
 
 Italian and German Replacement Points enter the game from the Axis Replacement
-Pool (20.66) asa result of direct planning by the Axis Player.
+Pool (<<20_66>>) as a result of direct planning by the Axis Player.
 
 [#20_61]*[20.61]* In the Axis Replacement Pool, the Axis Player will find the
 maximum number of Replacement Points for each type of point for the entire
@@ -220,16 +219,16 @@ This is further limited by the maximum points available per turn, per type.
 [#20_62]*[20.62]* The Axis Player may bring in any number of Replacement Points
 of any and all Classes during any one OpStage (see Case <<20_23>>) limited of
 course by the pool restrictions. However, each Replacement Point is counted
-against the Shipping Tonnage allowance for that Game-Turn (see Case 51.5). The
+against the Shipping Tonnage allowance for that Game-Turn (see Case <<51_5>>). The
 equivalent tonnage of each Point is given in the Pool Table. Thus, if the Axis
 Player wishes to bring in 10 Italian Infantry Replacement Points, he would need
-<<3_0>> Tons of Shipping availability.
+350 Tons of Shipping availability.
 
 [#20_63]*[20.63]* All Axis Replacement Points coming from the Axis Replacement
 Pool must be Planned for at least two turns in advance. In other words, Axis
-Planned Replacements for July, <<19_1>> must be determined in the Naval Convoy
-Arrival Phase of the 1/I1iGame-Turn of June, <<19_1>>. Replacement planned in
-June II] may arrive in any OP Stage Navel Convoy Arrival Phase of July I.
+Planned Replacements for July, 1941 must be determined in the Naval Convoy
+Arrival Phase of the 1/III Game-Turn of June, 1941. Replacement planned in
+June III may arrive in any OP Stage Navel Convoy Arrival Phase of July I.
 
 [#26_64]*[26.64]* Replacement Points have priority in Shipping Space over any
 type of supplies. The Axis Logistics Commander thus has to keep a close watch
@@ -255,13 +254,13 @@ place for them, so remember to space your Replacements carefully.
 [#20_71]*[20.71]* Most Commonwealth units and some of their Replacements arrive
 via the Reinforcement Track. However, most -Replacements — mostly "drafts" and
 transport — arrive somewhat randomly as mandated by the Commonwealth Production
-Tables (20.78).
+Tables (<<20_78>>).
 
 [#20_72]*[20.72]* The Commonwealth Player must plan two months in advance
 (unless specified in a given Scenario) for the arrival of Replacement Points via
 Production. Thus, for Points required for August, 1942, the Commonwealth Player
 must plan — using the Production Systems. — in the first Naval Convoy Schedule
-Phase of July, <<19_2>>. However, the Commonwealth Player always uses the
+Phase of July, 1942. However, the Commonwealth Player always uses the
 Production Table for the month (one months in the future) in which he wishes his
 units to arrive — not the month in which he is consulting it.
 
@@ -281,22 +280,24 @@ his Replacement Points simply arrive.
 
 [#20_76]*[20.76]* All Planned Replacements arrive in any hex in Cairo or
 Alexandria. They, like other Replacements, must undergo Training (see Case
-20.43).
+<<20_43>>).
 
 [#20_77]*[20.77]* The Commonwealth Player may “upgrade”? his Infantry units in
 much the same fashion as his Recce/AC units. This applies only to infantry units
-with a <<1_2>> (Off/Def) Close Assau]t Rating. The Commonwealth Player simply
+with a 1/2 (Off/Def) Close Assau]t Rating. The Commonwealth Player simply
 uses one Infantry Replacement Point for each TOE Strength Point in the unit he
 wishes to upgrade. Furthermore, the Commonwealth Player must upgrade a// TOE
 Points in that unit at the same time. The Replacement Point used is absorbed to
-increase the Assault Rating to <<2_2>>; it does not increase the TOE Strength
-itself. No upgrading may take place before the July <<1_1>>, 1942 Game-Turn,
-which means they may be “planned”' in June, <<19_2>>. Infantry Replacement
+increase the Assault Rating to 2/2; it does not increase the TOE Strength
+itself. No upgrading may take place before the July 1/I, 1942 Game-Turn,
+which means they may be "planned" in June, 1942. Infantry Replacement
 Points scheduled for upgrading need not be Trained. Once upgraded additional
-replacements assigned to that unit only require | Infantry Replacement Point per
+replacements assigned to that unit only require 1 Infantry Replacement Point per
 TOE Point, not 2 (1&1) Infantry Replacement Points.
 
-[#20_78]*[20.78]* Commonwealth Production System (see Charts and Tables)
+[#20_78]*[20.78] Commonwealth Production System*
+
+(see Charts and Tables)
 
 [#20_8]
 === COMMONWEALTH MANDATORY WITHDRAWALS
@@ -316,7 +317,7 @@ to that level, the highest TOE Strength-level unit of its type available.
 
 [#20_83]*[20.83]* Units to be Withdrawn must be moved to Cairo or Alexandria on
 or before the Game-Turn or Stage they are to be withdrawn. If they are not
-present or at required TOE Strength (20.75) by that time, they are eliminated.
+present or at required TOE Strength (<<20_75>>) by that time, they are eliminated.
 (This is a play mechanism to forestall procrastination.) Units so eliminated may
 not return (as many Withdrawls do, later in the game).
 
