Land rules finished

--- a/section-26.adoc
+++ b/section-26.adoc
@@ -3,14 +3,12 @@
 
 GENERAL RULE:
 
-in no place did the mine receive more notoriety
+In no place did the mine receive more notoriety
 than in the Libyan/Egyptian desert. Used sparingly in the early part of the war, minefields became a
 standard defensive feature by 1942. By El Alamein, they were ubiquitous. Minefields were more
 of a hindrance than a danger, at least on an operational level. (On tactical level it's a different question.) Therefore, in CNA minefields are obstacles;
 they rarely cause casualties. Units pay increased
 Capability Point costs to enter minefields.
-
-ee
 
 CASES:
 [#26_1]
