--- a/section-25.adoc
+++ b/section-25.adoc
@@ -2,58 +2,55 @@
 == FORTIFICATIONS
 GENERAL RULE:
 
-All major cities in the game are considered fortifications. In addition, Players may construct fortifications (see Case<<24_4>>. Fortifications are
-available in levels, reflective of the depth and
-strength of the fortifications. Most fortifications
-and cities have two possible levels, but Cairo and
-Alexandria have three possible levels. Fortifications give defensive benefits to units in that hex.
+All major cities in the game are considered fortifications. In addition, Players
+may construct fortifications (see Case<<24_4>>. Fortifications are available in
+levels, reflective of the depth and strength of the fortifications. Most
+fortifications and cities have two possible levels, but Cairo and Alexandria
+have three possible levels. Fortifications give defensive benefits to units in
+that hex.
 
 CASES:
 
 [#25_1]
 === FORTIFICATION LEVELS
 
-[#25_14]*[25.14]* Each level of Fortification gives an increasing defensive benefit to units in that hex (see T.E.C., Case <<8_37>>.
+[#25_14]*[25.14]* Each level of Fortification gives an increasing defensive
+benefit to units in that hex (see T.E.C., Case <<8_37>>.
 
-[#25_12]*[25.12]* Each major city on the game-map is a
-Level 2 fortification. Cairo and. Alexandria are
-Level 3 fortifications. Villages are not fortifications.
+[#25_12]*[25.12]* Each major city on the game-map is a Level 2 fortification.
+Cairo and. Alexandria are Level 3 fortifications. Villages are not
+fortifications.
 
-[#25_13]*[25.13]* Constructed fortifications are tither Level
-1 or Level 2. Fortifications can never be constructed higher than Level 2, except in Cario or
-Alexandria. (Fortification counters have two
-sides, representing each level.)
+[#25_13]*[25.13]* Constructed fortifications are tither Level 1 or Level 2.
+Fortifications can never be constructed higher than Level 2, except in Cario or
+Alexandria. (Fortification counters have two sides, representing each level.)
 
-[#25_14]*[25.14]* Fortifications may be reduced in Level
-strength by air bombardment (see Case<<39_37>> or
-artillery barrage (Case<<12_5>>. No other type of
-combat affects fortifications. Reduced fortifications may be rebuilt.
+[#25_14]*[25.14]* Fortifications may be reduced in Level strength by air
+bombardment (see Case<<39_37>> or artillery barrage (Case<<12_5>>. No other type
+of combat affects fortifications. Reduced fortifications may be rebuilt.
 
-[#25_15]*[25.15]* Reduced Fortification Levels may affect
-the rate of repair of a repair facility (see Case
-22.35).
+[#25_15]*[25.15]* Reduced Fortification Levels may affect the rate of repair of
+a repair facility (see Case 22.35).
 
-[#25_16]*[25.16]* Major cities and fortifications may be
-reduced to a Fortification Level of zero. (Note:
-The "zero”' level has no effect in the Land Game,
-except to mean that the fortification can be more
-easily rebuilt. However, see the Strafing Table,
-Case <<40_8>>.
+[#25_16]*[25.16]* Major cities and fortifications may be reduced to a
+Fortification Level of zero. (Note: The "zero”' level has no effect in the Land
+Game, except to mean that the fortification can be more easily rebuilt. However,
+see the Strafing Table, Case <<40_8>>.
 
 [#25_2]
 === EFFECTS OF FORTIFICATIONS
 
-[#25_21]*[25.21]* Fortifications have no effect on movement or breakdown for any units.
+[#25_21]*[25.21]* Fortifications have no effect on movement or breakdown for any
+units.
 
-[#25_22]*[25.22]* The effects on various combat types for a
-unit defending in a fortified hex are summarized
-on the Terrain Effects Chart, Case <<8_37>>.
+[#25_22]*[25.22]* The effects on various combat types for a unit defending in a
+fortified hex are summarized on the Terrain Effects Chart, Case <<8_37>>.
 
-[#25_23]*[25.23]* Air bombardment and strafing of land
-units (combat or otherwise), trucks, flak and supply dumps in fortifications is treated the same as artillery barrage in terms of column adjustments,
-with one exception: air bombardment does not affect any of the above items while in a Level 3 City.
-That city must be reduced to Level 2 for air
-bombardment to have any effect.
+[#25_23]*[25.23]* Air bombardment and strafing of land units (combat or
+otherwise), trucks, flak and supply dumps in fortifications is treated the same
+as artillery barrage in terms of column adjustments, with one exception: air
+bombardment does not affect any of the above items while in a Level 3 City.
+That city must be reduced to Level 2 for air bombardment to have any effect.
 
-[#25_24]*[25.24]* A/l units in Level 3 cities ignore a// pinned
-results from any type of combat.
+[#25_24]*[25.24]* A/l units in Level 3 cities ignore a// pinned results from any
+type of combat.
