--- a/section-28.adoc
+++ b/section-28.adoc
@@ -51,8 +51,8 @@ Prisoner Points enter their Point of Departure they are removed from the game â€
 permanently. (They will not be used in factories to promote your war effort.)
 
 [#28_17]*[28.17]* Each detention camp requires the presence of one Guard Point
-(see Case<<28_2>>.  When moving, one Guard Point is requried for each 1 Prisoner
-Points. Any prisoners without a guard "escape" (see Case<<28_23>>.
+(see Case <<28_2>>).  When moving, one Guard Point is requried for each 1
+Prisoner Points. Any prisoners without a guard "escape" (see Case<<28_23>>).
 
 [#28_18]*[28.18]* Prisoners may be transported by trucks, if you are feeling
 profligate with your transport.
