--- a/section-32.adoc
+++ b/section-32.adoc
@@ -395,6 +395,7 @@ rating.
 The Players ignore all Road and Track (only) Stacking Point restrictions listed
 in Section <<9_0>>.
 
+[unnumbered]
 [#32_10]
 == ADDENDA
 
@@ -548,6 +549,7 @@ underway and no benefit in reduction of construction is applied.
 [#30_36]*[30.36]* (addition) If the warship is eliminated while transporting a
 commando unit, the commando unit is also eliminated.
 
+[discrete]
 === COUNTER ADDENDA
 
 Counter Section Nr. 1
@@ -572,3 +574,71 @@ size indicator of "III"
 
 E. The IV/66 (101st Trieste) Company should show Heavy Weapons and not an
 Anti-tank symbol.
+
+Counter Section Nr. 2
+
+A. The following units are missing the headquarters stripe: 30 GaF (Bardia), 10
+Brs, Libyan, 54 Ter (Derna), and 4/10 Army. Note that the Stacking Points
+indicators of the 54 Ter and 4/10 Army are correct in not possessing
+parentheses.
+
+B. The headquarters counter for the 10th Bersaglieri Regiment (10 Brs) should show a
+mechanized infantry instead of a motorized infantry symbol.
+
+C. The 5th and 23rd Desert Patrol (5 DPtl and 23 DPtl) units should show recon
+instead of motorized infantry symbols.
+
+D. The Sth, 6th, and 7th Artillery Regiments of the Tobruk Garrison should show
+counter abbreviations and Parent Unit indicators of, respectively, V/31
+(Tobruk), VI/31 (Tobruk), and VII/31 (Tobruk). The counter abbreviations on the
+Tobruk Garrison's OA Sheet are also incorrect.
+
+Counter Section Nr. 3
+
+A. The 138th Infantry Battalion of the 2nd CCNN Division — 138 (238/2CN) —
+should not show a headquarters stripe.
+
+Counter Section Nr. 4
+
+A. The ArKo 104 artillery counter is missing its headquarters stripe.
+
+B. The 368 Heavy Flak Battalion should show a Heavy AA instead of an AA symbol.
+
+C. The 200th Regiment of the 15th Panzer Division should show a motorized
+infantry instead of a mechanized infantry symbol.
+
+D. The 5th Light Panzer Division's Stacking Point indicator is missing its
+closing parenthesis.
+
+Counter Section Nr. 5
+
+A. The 2nd New Zealand Cavalry (2NZ Cav) should show an Armored Recon instead of
+a Tank symbol.
+
+Counter Section Nr. 6
+
+No errata.
+
+Counter Section Nr. 7
+
+A. The 65th Anti-tank Regiment should show an Anti-tank instead of an Artillery
+symbol.
+
+B. The 14 (14/70) Anti-tank Company should show an Anti-tank instead of an
+Artillery symbol.
+
+C. The 61st Heavy AA counter is missing its "1" Stacking Point indicator.
+
+Counter Section Nr. 8
+
+A. The 13th DCL Armored Car Regiment is attached and not assigned to the 18th
+Indian Brigade and should show a dash (—) instead of "18 In X" as its Parent
+Formation indicator.
+
+B. The 9th Australian Division's headquarters counter should not show an
+Engineering Capability (BE) indicator.
+
+Counter Section Nr, 9 (back and front)
+
+A. The Minefield, POW, Guard, and POW Camp counters should be labelled as
+"Commonwealth" and not "Allies".
